--- a/car_link/pubspec.yaml
+++ b/car_link/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   http: ^0.12.0+2
   charts_flutter: ^0.8.1
+  timeago: ^2.0.20
 
 dev_dependencies:
   flutter_test:
